ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.spring-petclinic.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: eureka.dev.spring-petclinic.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
    - host: admin.dev.spring-petclinic.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9090
